--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -291,7 +291,7 @@ a:focus {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    background: url(../img/departments.jpg) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -299,10 +299,35 @@ a:focus {
     -o-background-size: cover;
 }
 
+.departments-big-container {
+    width: 100%;
+    margin-left: 0;
+}
+
+.actingClasses-section {
+    text-align: left;
+}
+
+.acting-classes-img-left {
+    width: 30%;
+    margin-right: 2%;
+    float: left;
+}
+
+.acting-classes-img-right {
+    width: 30%;
+    margin-left: 2%;
+    float: right;
+}
+
 #map {
     width: 100%;
     height: 200px;
     margin-top: 100px;
+}
+
+#contact p a {
+    color: #245A5F;
 }
 
 @media(min-width:767px) {
@@ -316,7 +341,7 @@ a:focus {
     }
 
     .actingClasses-section {
-        padding: 100px 0;
+        padding: 0;
     }
 
     #map {
@@ -336,17 +361,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #42dca3;
-    color: #42dca3;
+    border: 1px solid #074C52;
+    color: #074C52;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #42dca3;
+    border: 1px solid #90DAE1;
     outline: 0;
-    color: #000;
-    background-color: #42dca3;
+    color: #074C52;
+    background-color: #90DAE1;
 }
 
 ul.banner-social-buttons {
